--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel": "^8.1.4",
     "embla-carousel-autoplay": "^8.1.4",
     "embla-carousel-react": "^8.1.4",
+    "heroicons": "^2.1.4",
     "lucide-react": "^0.394.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -32,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
